# code-to-client-tools

./: .gitignore  README.md  maskfile.md
autofiller/: .env.example  .gitignore  Autofiller Requirements.md  README.md  field_config.json  maskfile.md  pyproject.toml
autofiller/contacts/: bookkeeper-contacts-protland.json
autofiller/params/: Bookkeeping-portland.json
autofiller/src/autofiller/: config.py  db.py  field_config.py  form_detection.py  heuristics.py  llm_selector.py  main.py
tracker-client/: .env.example  README.md  nuxt.config.js  package-lock.json  package.json  uno.config.js
tracker-client/app/: app.vue
tracker-client/app/assets/css/: main.css
tracker-client/app/components/: GlobalFilters.vue  MetricCard.vue  StatusBadge.vue  StatusCard.vue  StatusHistory.vue
tracker-client/app/composables/: useApi.js  useDark.js  usePrimaryColor.js  useSecondaryColor.js  useSelectedVertical.js
tracker-client/app/pages/: index.vue
tracker-client/app/pages/contacts/: [id].vue  index.vue  new.vue
tracker-client/app/pages/settings/: verticals.vue
tracker-client/app/stores/: contacts.js  dashboard.js  filters.js  locations.js  verticals.js
tracker-server/: .env.example  README.md  Tracker Requirements.md  create_db.py  maskfile.md  pyproject.toml  requirements.txt
tracker-server/src/tracker_server/: __init__.py  config.py  db.py  main.py  schemas.py
