[tool.poetry]
name = "autofiller"
version = "0.1.0"
description = ""
authors = ["Joel Gardi <joel@gardell.com>"]
readme = "README.md"
packages = [{include = "autofiller", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.58.0"
litellm = "^1.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
